<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLabelSelectedAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/here_are_selected_answers"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/who_is_best_cricketer"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/base"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/answer_colon"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvBestCricketer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:gravity="center|start"
            android:padding="@dimen/dp_6"
            android:singleLine="true"
            android:text="@string/answer"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/colors_in_indian_flag_label"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@drawable/base"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/answer_colon"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvAnswerFlag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:gravity="center|start"
            android:padding="@dimen/dp_6"
            android:singleLine="true"
            android:text="@string/answer"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_8">

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_64"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/button_ripple"
            android:elevation="@dimen/dp_10"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:translationZ="@dimen/dp_8"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_64"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/button_ripple"
            android:elevation="@dimen/dp_10"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:translationZ="@dimen/dp_8"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>