<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLabelUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/what_is_your_name"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/base"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:id="@+id/tvAnswerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/answer_colon"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_8"
            android:background="@null"
            android:hint="@string/enter_your_name_here"
            android:inputType="textPersonName"
            android:padding="@dimen/dp_6"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/sp_16"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_64"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/button_ripple"
        android:elevation="@dimen/dp_10"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:translationZ="@dimen/dp_8" />

</LinearLayout>