<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGameId"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/game"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/date_time"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/sample_name"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:gravity="center"
            android:text="@string/who_is_best_cricketer"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/answer"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvAnswerCricketer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/sample_name"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:gravity="center"
            android:text="@string/colors_in_indian_flag_label"
            android:textColor="@color/grey"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/answer"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvAnswerFlag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:gravity="center"
                android:text="@string/sample_name"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:contentDescription="@string/divider"
        android:src="@color/grey" />
</LinearLayout>